Fixed number phone on Iphone

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -81,7 +81,10 @@ input, textarea
             left: -25px
             color: #555555
             font-size: 32px
-        
+        &-number
+            color: inherit
+            text-decoration: none
+
 .hamburger
     position: absolute
     right: 0
@@ -257,8 +260,7 @@ body.mm-wrapper_opened
     .phone
         font-family: $font-firasans
         text-align: center
-
-        span
+        &-number
             color: inherit
             text-decoration: none
         
